GNOME Bugzilla – Bug 754207
[PATCH] Bad alignment of Recommended and Featured tiles in RTL locales
Last modified: 2015-08-29 12:22:48 UTC
Created attachment 310142 [details] [review] Corrects the allocation of the children of GsHidingBox in RTL text direction The contents sticks to the left edge of the window without any margin if the locale is right-to-left. Also it is possible to reproduce this bug in any locale switching the text direction with GTK+ Inspector. This bug has been introduced when fixing bug 742211.
Review of attachment 310142 [details] [review]: Looks good to me, thanks!