hiding box: Fix incorrect allocation of the children in RTL

Trivial fix but the bug made the contents stick to the left edge
of the window without any margin in the RTL locales.

https://bugzilla.gnome.org/show_bug.cgi?id=754207